Fix for tons of scrollbars appearent on non-osx OSes

--- a/app/styles/mainmenu.styl
+++ b/app/styles/mainmenu.styl
@@ -21,7 +21,8 @@
 	width 100vw
 
 .viewer .main-menu div
-	overflow-y scroll
+	overflow-y auto
+	overflow-x hidden
 
 .viewer .menu
 	padding 10px
